# api/swagger.json
@@ -71,6 +71,17 @@
                 }
             }
         },
+        "main.cardValidationError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "main.errorResponse": {
             "type": "object",
             "properties": {
@@ -82,6 +93,9 @@
         "main.validateCardResponse": {
             "type": "object",
             "properties": {
+                "error": {
+                    "$ref": "#/definitions/main.cardValidationError"
+                },
                 "valid": {
                     "type": "boolean"
                 }
